--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <title>{% if page.title %}{{ page.title }} by {% endif %}{{ site.name }} </title>
+  <title>{% if page.title %}{{ page.title }} By {% endif %}{{ site.name }} </title>
 
   {% include meta.html %}
   {% include fonts.html %}
