--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <title>{% if page.title %}{{ page.title }} By {% endif %}{{ site.name }} </title>
-
+  <img src="https://Heart-Eyed-World.github.io/images/title.jpeg" width="0" height="0" />
   {% include meta.html %}
   {% include fonts.html %}
 
