--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
   {% include head.html %}
   <body>
+  <img src="https://Heart-Eyed-World.github.io/images/title.jpeg" width="0" height="0" />
     {% include nav.html %}
 
     {% if page.toc==true %}
