--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body>
-    < img src="mages/title.jpeg" width="0" height="0" />
+    <img src="images/title.jpg" width="0" height="0" />
     {% include nav.html %}
 
     {% if page.toc==true %}
