--- a/_sass/_gitalk.scss
+++ b/_sass/_gitalk.scss
@@ -59,7 +59,7 @@
     }
     .pl-ii {
       color: #fafbfc;
-      background-color: #b31d28;
+      background-color: #868e961a;
     }
     .pl-c2 {
       color: #fafbfc;
