--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -56,7 +56,7 @@ $footnote-link-background-over-color: $oc-gray-1;
 $selection-background-color: $oc-gray-3;
 
 $tag-index-label-background-color: $oc-gray-2;
-$tag-index-count-background-color: #868e961a;
+$tag-index-count-background-color: $oc-gray-6;
 
 $footer-border-color: $oc-gray-2;
 $footer-background-color: $oc-gray-0;
